--- a/package.json
+++ b/package.json
@@ -9,19 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "@radix-ui/react-label": "^2.1.0",
+    "@tabler/icons-react": "^3.6.0",
+    "@types/canvas-confetti": "^1.6.4",
+    "@uiw/react-md-editor": "^4.0.4",
+    "appwrite": "^15.0.0",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.14.4",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.396.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "15.1.0",
+    "next-themes": "^0.4.4",
+    "node-appwrite": "^13.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icon-cloud": "^4.1.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
